# GLLearning

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cc/appweb/gllearning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/nv12/: 1280x720nv12.yuv
app/src/main/assets/nv21/: 1280x720nv21.yuv
app/src/main/cpp/: JniLoad.cpp  VoicePlayer.cpp  VoicePlayer.h  VoiceRecorder.cpp  VoiceRecorder.h  myutils.h  playcallback.h
app/src/main/cpp/render/: BgRender.cpp  BgRender.h  glrenderJniLoad.cpp
app/src/main/cpp/voice/: J2CMapping.h  VoiceJniLoad.cpp  VoiceRecorder.cpp  VoiceRecorder.h  recordcallback.h
app/src/main/java/cc/appweb/gllearning/: API1GLSurfaceViewActivity.kt  API1SurfaceViewActivity.kt  API1TextureViewActivity.kt  API2TextureViewActivity.kt  AudioCodecActivity.kt  AudioRecordActivity.kt  CameraXActivity.kt  MainActivity.kt  MediaCodecActivity.kt  MyApplication.kt  OpenGLESActivity.kt  PlayAudioActivity.kt
app/src/main/java/cc/appweb/gllearning/audio/: AACWrapM4A.kt  (+5 more)
app/src/main/res/drawable/: divider_drawable.xml
app/src/main/res/layout/: activity_api1_glsurfaceview.xml  activity_api1_surfaceview.xml  activity_api1_textureview.xml  activity_api2_textureview.xml  activity_audio_codec.xml  activity_audio_record.xml  activity_main.xml  activity_media_codec.xml  activity_open_gles_activity.xml  activity_play_audio.xml  egl_fragment.xml  gl_main_fragment.xml  gl_rotate_fragment.xml  loading_view.xml  play_audio_item_view.xml  play_video_item_vew.xml  scale_fragment.xml  texture_view_render_fragment.xml  watermark_fragment.xml  yuv_rotate_fragment.xml
app/src/test/java/cc/appweb/gllearning/: ExampleUnitTest.java
(+31 files in other folders)
